--- a/force-app/main/default/classes/SummitEventsCancelReviewController.cls
+++ b/force-app/main/default/classes/SummitEventsCancelReviewController.cls
@@ -44,6 +44,9 @@ public with sharing class SummitEventsCancelReviewController {
                         WHERE Event_Registration__c = :regId
                 ];
 
+                if (SEShared.convertDateToDatetime(evt.Event_Instance__r.Instance_End_Date__c, evt.Event_Instance__r.Instance_End_Time__c) < SEShared.adjustForCentralTime(Datetime.now())) {
+                    eventOver = true;
+                }
 
                 List<Summit_Events_Instance__c> eventInstance = [
                         SELECT Id, Event__r.Event_Name__c, Instance_Title__c,
@@ -51,10 +54,6 @@ public with sharing class SummitEventsCancelReviewController {
                         FROM Summit_Events_Instance__c W
                                 WHERE Id = :evt.Event_Instance__c
                 ];
-
-                if (SEShared.convertDateToDatetime(evt.Event_Instance__r.Instance_End_Date__c, null, '') < SEShared.adjustForTimeZone(Datetime.now(), evt.Event_Instance__r.Instance_Time_Zone__c)) {
-                    eventOver = true;
-                }
 
                 If (eventInstance.size()>0) {
                     navBreadCrumb = SEShared.navBreadcrumbBuilder(eventInstance[0],false);
